fix: gap com o header

--- a/src/app/shared/main-section/main-section.css
+++ b/src/app/shared/main-section/main-section.css
@@ -3,6 +3,8 @@ section {
   flex-direction: column-reverse;
   align-items: center;
   justify-content: center;
+
+  margin-top: 80px;
 }
 
 section .main-content {
@@ -10,6 +12,7 @@ section .main-content {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 12px;
 }
 
 section .main-content span {
@@ -27,6 +30,7 @@ section .main-content h1 {
   -moz-text-fill-color: transparent;
   display: inline-block;
   font-size: 40px;
+  margin: 0px;
 }
 
 @media (min-width: 1080px) {
@@ -37,6 +41,7 @@ section .main-content h1 {
 
   section .main-content {
     align-items: flex-start;
+    max-width: 50%;
   }
 
   section .main-content h1 {
